# mcp-clickhouse

./: .env.example  .gitignore  Dockerfile  README.md  README_CN.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/prompts/: __init__.py
app/api/prompts/migration_planning/: __init__.py  migration_planning.py  migration_planning_en.py
app/api/prompts/performance_troubleshooting/: __init__.py  performance_troubleshooting.py  performance_troubleshooting_en.py
app/api/prompts/query_optimization/: __init__.py  query_optimization.py  query_optimization_en.py
app/api/prompts/schema_design/: __init__.py  schema_design.py  schema_design_en.py
app/api/prompts/table_analysis/: __init__.py  table_analysis.py  table_analysis_en.py
app/api/resources/: __init__.py  data.py  schema.py
app/api/tools/: __init__.py  query.py  schema.py
app/cli/: __init__.py  commands.py
app/core/: __init__.py  server.py
app/core/client/: __init__.py  connection.py  formats.py  pool.py
app/models/: __init__.py  query.py  schema.py
app/utils/: __init__.py  config.py  logging.py  metrics.py
